--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,600&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Montserrat:300,400,400i,500,600&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
 <style>
