--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ z-index:-1;
 					
 					<div class="untuk-thumb">
 						<div class="thumb-img">
-							<a href="#">
+							<a taget="_blank" href="https://jhanter.github.io/tesfull/">
 								<img src="img/tipejf001.jpg" />
 							</a>
 						</div><!-- thumb-img -->
