--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>JFkreatif | Digital Produk</title>
     <link rel="icon" sizes="16x16" href="img/favicon.png">
-    <meta name="description" content="HTML Template">
+    <meta name="description" content="Kreatif Digital Produk">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
