--- a/Privacy-policy.html
+++ b/Privacy-policy.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>JFkreatif | Kebijakan Privasi</title>
     <link rel="icon" href="img/icons/favicon.png">
-    <meta name="description" content="HTML Template">
+    <meta name="description" content="Kebijakan Privasi">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Montserrat:300,400,400i,500,600&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="../css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/mobile.css"/>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/mobile.css"/>
 <style>
 
 </style>
@@ -67,11 +67,11 @@
 <h2>Pelanggaran data</h2>
 <p>Jika kami mengetahui bahwa keamanan Situs web telah disusupi atau informasi Pribadi pengguna telah diungkapkan kepada pihak ketiga yang tidak terkait sebagai akibat dari aktivitas eksternal, termasuk, tetapi tidak terbatas pada, serangan keamanan atau penipuan, kami berhak untuk mengambil langkah-langkah yang pantas secara wajar, termasuk, tetapi tidak terbatas pada, investigasi dan pelaporan, serta pemberitahuan dan kerja sama dengan otoritas penegak hukum. Dalam hal terjadi pelanggaran data, kami akan melakukan upaya yang wajar untuk memberi tahu orang-orang yang terkena dampak jika kami percaya bahwa ada risiko yang wajar akan merugikan pengguna sebagai akibat dari pelanggaran atau jika pemberitahuan sebaliknya diharuskan oleh hukum. Ketika kami melakukannya, kami akan mengirimi Anda email, menghubungi Anda melalui telepon.</p>
 <h2>Perubahan dan amandemen</h2>
-<p>Kami dapat memperbarui Kebijakan Privasi ini dari waktu ke waktu atas kebijakan kami dan akan memberi tahu Anda tentang setiap perubahan materi dengan cara kami memperlakukan Informasi Pribadi. Ketika perubahan dilakukan, kami akan memposting pemberitahuan di halaman utama situs web kami. Kami juga dapat memberikan pemberitahuan kepada Anda dengan cara lain dalam kebijaksanaan kami, seperti melalui informasi kontak yang Anda berikan. Setiap versi terbaru dari Kebijakan Privasi ini akan efektif segera setelah posting Kebijakan Privasi yang direvisi kecuali dinyatakan sebaliknya. Anda terus menggunakan Situs Web atau Layanan setelah tanggal efektif Kebijakan Privasi yang direvisi (atau tindakan lain yang ditentukan pada saat itu) akan merupakan persetujuan Anda terhadap perubahan tersebut. Namun, kami tidak akan, tanpa persetujuan Anda, menggunakan Data Pribadi Anda dengan cara yang berbeda dari apa yang dinyatakan pada saat Data Pribadi Anda dikumpulkan. Kebijakan dibuat dengan <a style="color:inherit" target="_blank" title="Generate privacy policy" href="https://www.websitepolicies.com/blog/sample-privacy-policy-template">WebsitePolicies</a>.</p>
+<p>Kami dapat memperbarui Kebijakan Privasi ini dari waktu ke waktu atas kebijakan kami dan akan memberi tahu Anda tentang setiap perubahan materi dengan cara kami memperlakukan Informasi Pribadi. Ketika perubahan dilakukan, kami akan memposting pemberitahuan di halaman utama situs web kami. Kami juga dapat memberikan pemberitahuan kepada Anda dengan cara lain dalam kebijaksanaan kami, seperti melalui informasi kontak yang Anda berikan. Setiap versi terbaru dari Kebijakan Privasi ini akan efektif segera setelah posting Kebijakan Privasi yang direvisi kecuali dinyatakan sebaliknya. Anda terus menggunakan Situs Web atau Layanan setelah tanggal efektif Kebijakan Privasi yang direvisi (atau tindakan lain yang ditentukan pada saat itu) akan merupakan persetujuan Anda terhadap perubahan tersebut. Namun, kami tidak akan, tanpa persetujuan Anda, menggunakan Data Pribadi Anda dengan cara yang berbeda dari apa yang dinyatakan pada saat Data Pribadi Anda dikumpulkan.</p>
 <h2>Penerimaan kebijakan ini</h2>
 <p>Anda mengakui bahwa Anda telah membaca Kebijakan ini dan menyetujui semua syarat dan ketentuannya. Dengan menggunakan Situs Web atau Layanannya, Anda setuju untuk terikat oleh Kebijakan ini. Jika Anda tidak setuju untuk mematuhi ketentuan Kebijakan ini, Anda tidak berwenang untuk menggunakan atau mengakses Situs Web dan Layanannya.</p>
 <h2>Menghubungi kami</h2>
-<p>Jika Anda ingin menghubungi kami untuk memahami lebih lanjut tentang Kebijakan ini atau ingin menghubungi kami mengenai masalah apa pun yang berkaitan dengan hak individu dan Informasi Pribadi Anda, Anda dapat mengirim email ke &#106;hk&#97;r&#116;una&#109;a&#64;g&#109;&#97;&#105;l&#46;&#99;o&#109;</p>
+<p>Jika Anda ingin menghubungi kami untuk memahami lebih lanjut tentang Kebijakan ini atau ingin menghubungi kami mengenai masalah apa pun yang berkaitan dengan hak individu dan Informasi Pribadi Anda, Anda dapat mengirim email ke &#106;&#102;&#107;&#114;&#101;&#97;&#116;&#105;&#102;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</p>
 <p>Dokumen ini terakhir diperbarui pada 21 Maret 2020</p>
 			</div>
 		</div><!-- kolum-jfkreatif-kebijakan-pripasi -->
