--- a/Syarat-dan-ketentuan.html
+++ b/Syarat-dan-ketentuan.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>JFkreatif | Syarat dan ketentuan</title>
     <link rel="icon" href="img/icons/favicon.png">
-    <meta name="description" content="HTML Template">
+    <meta name="description" content="Syarat dan ketentuan">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Montserrat:300,400,400i,500,600&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="../css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/mobile.css"/>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/mobile.css"/>
 <style>
 
 </style>
@@ -35,7 +35,7 @@
 <h2>Penerimaan persyaratan ini</h2>
 <p>Anda mengakui bahwa Anda telah membaca Perjanjian ini dan menyetujui semua syarat dan ketentuannya. Dengan menggunakan Situs Web atau Layanannya, Anda setuju untuk terikat oleh Perjanjian ini. Jika Anda tidak setuju untuk mematuhi ketentuan Perjanjian ini, Anda tidak berwenang untuk menggunakan atau mengakses Situs Web dan Layanannya.</p>
 <h2>Menghubungi kami</h2>
-<p>Jika Anda ingin menghubungi kami untuk memahami lebih lanjut tentang Perjanjian ini atau ingin menghubungi kami mengenai masalah apa pun yang terkait dengannya, Anda dapat melakukannya melalui <a target="_blank" rel="nofollow" href="https://www.jfkreatif.com/contact">contact form</a> atau kirim email ke &#106;&#104;k&#97;rt&#117;n&#97;ma&#64;g&#109;a&#105;&#108;&#46;com</p>
+<p>Jika Anda ingin menghubungi kami untuk memahami lebih lanjut tentang Perjanjian ini atau ingin menghubungi kami mengenai masalah apa pun yang terkait dengannya, Anda dapat melakukannya melalui <a target="_blank" rel="nofollow" href="#">contact form</a> atau kirim email ke &#106;&#102;&#107;&#114;&#101;&#97;&#116;&#105;&#102;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</p>
 <p>Dokumen ini terakhir diperbarui pada 21 Maret 2020
 </p>
 			</div>
@@ -47,9 +47,5 @@
 </div><!-- jfkreatifmobile -->
 
 
-<script src="js/jquery-1.11.0.min.js"></script>
-<script src="js/simple-lightbox.min.js"></script> 
-<script src="js/slick.min.js"></script>
-<script src="js/mobilejs.js"></script>
 </body>
 </html>
