--- a/cookie.html
+++ b/cookie.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>JFkreatif | Kebijakan Cookie</title>
     <link rel="icon" href="img/icons/favicon.png">
-    <meta name="description" content="HTML Template">
+    <meta name="description" content="Kebijakan Cookie">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Montserrat:300,400,400i,500,600&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="../css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/mobile.css"/>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/mobile.css"/>
 <style>
 
 </style>
@@ -26,7 +26,7 @@
 			<div class="kolum-isi-jfkreatif-kebijakan-pripasi">
 				<h1>Kebijakan Cookie</h1>
 <p>Kebijakan cookie ini ("Kebijakan") menjelaskan cookie apa dan bagaimana Operator Situs Web ("Operator Situs Web", "Saya", "Aku" atau "kami") menggunakannya pada <a target="_blank" rel="nofollow" href="https://www.jfkreatif.com">jfkreatif.com</a> situs web dan produk atau layanannya (secara kolektif disebut "Situs Web" atau "Layanan")..</p>
-<p>Anda harus membaca Kebijakan ini sehingga Anda dapat memahami jenis cookie apa yang kami gunakan, informasi yang kami kumpulkan menggunakan cookie dan bagaimana informasi itu digunakan. Ini juga menjelaskan pilihan yang tersedia untuk Anda sehubungan dengan menerima atau menolak penggunaan cookie. Untuk informasi lebih lanjut tentang cara kami menggunakan, menyimpan dan mengamankan data pribadi Anda, lihat <a target="_blank" rel="nofollow" href="https://www.jfkreatif.com/privacy">Kebijakan pribadi</a>.</p>
+<p>Anda harus membaca Kebijakan ini sehingga Anda dapat memahami jenis cookie apa yang kami gunakan, informasi yang kami kumpulkan menggunakan cookie dan bagaimana informasi itu digunakan. Ini juga menjelaskan pilihan yang tersedia untuk Anda sehubungan dengan menerima atau menolak penggunaan cookie. Untuk informasi lebih lanjut tentang cara kami menggunakan, menyimpan dan mengamankan data pribadi Anda, lihat <a target="_blank" rel="nofollow" href="https://www.jfkreatif.com/Privacy-policy.html">Kebijakan pribadi</a>.</p>
 
 <h2>Apa itu cookie?</h2>
 <p>Cookie adalah potongan kecil data yang disimpan dalam file teks yang disimpan di komputer Anda atau perangkat lain ketika situs web dimuat di browser. Mereka banyak digunakan untuk mengingat Anda dan preferensi Anda, baik untuk satu kunjungan (melalui "cookie sesi") atau untuk beberapa kunjungan berulang (menggunakan "cookie tetap").</p>
@@ -50,7 +50,7 @@
 <h2>Penerimaan kebijakan ini</h2>
 <p>Anda mengakui bahwa Anda telah membaca Kebijakan ini dan menyetujui semua syarat dan ketentuannya. Dengan menggunakan Situs Web atau Layanannya, Anda setuju untuk terikat oleh Kebijakan ini. Jika Anda tidak setuju untuk mematuhi ketentuan Kebijakan ini, Anda tidak berwenang untuk menggunakan atau mengakses Situs Web dan Layanannya.</p>
 <h2>Menghubungi kami</h2>
-<p>Jika Anda ingin menghubungi kami untuk memahami lebih lanjut tentang Kebijakan ini atau ingin menghubungi kami mengenai segala hal yang berkaitan dengan penggunaan cookie kami, Anda dapat melakukannya melalui <a target="_blank" rel="nofollow" href="https://www.jfkreatif.com/contact">contact form</a> atau kirim email ke jh&#107;&#97;r&#116;&#117;na&#109;a&#64;&#103;&#109;ail&#46;c&#111;m</p>
+<p>Jika Anda ingin menghubungi kami untuk memahami lebih lanjut tentang Kebijakan ini atau ingin menghubungi kami mengenai segala hal yang berkaitan dengan penggunaan cookie kami, Anda dapat melakukannya melalui <a target="_blank" rel="nofollow" href="#">contact form</a> atau kirim email ke &#106;&#102;&#107;&#114;&#101;&#97;&#116;&#105;&#102;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</p>
 <p>Dokumen ini terakhir diperbarui pada 21 Maret 2020</p>
 			</div>
 		</div><!-- kolum-jfkreatif-kebijakan-pripasi -->
