--- a/disclaimer.html
+++ b/disclaimer.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>JFkreatif | Penolakan</title>
     <link rel="icon" href="img/icons/favicon.png">
-    <meta name="description" content="HTML Template">
+    <meta name="description" content="Penolakan">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Montserrat:300,400,400i,500,600&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="../css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/mobile.css"/>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/mobile.css"/>
 <style>
 
 </style>
@@ -39,7 +39,7 @@
 <h2>Penerimaan penafian ini</h2>
 <p>Anda mengakui bahwa Anda telah membaca Penafian ini dan menyetujui semua syarat dan ketentuannya. Dengan mengakses Situs Web Anda setuju untuk terikat oleh Penafian ini. Jika Anda tidak setuju untuk mematuhi ketentuan Penafian ini, Anda tidak berwenang untuk menggunakan atau mengakses Situs Web.</p>
 <h2>Menghubungi kami</h2>
-<p>Jika Anda ingin menghubungi kami untuk memahami lebih lanjut tentang Penafian ini atau ingin menghubungi kami mengenai masalah apa pun yang berkaitan dengannya, Anda dapat melakukannya melalui <a target="_blank" rel="nofollow" href="https://www.jfkreatif.com/contact">contact form</a> atau kirim email ke &#106;h&#107;art&#117;na&#109;&#97;&#64;gm&#97;&#105;l.&#99;o&#109;</p>
+<p>Jika Anda ingin menghubungi kami untuk memahami lebih lanjut tentang Penafian ini atau ingin menghubungi kami mengenai masalah apa pun yang berkaitan dengannya, Anda dapat melakukannya melalui <a target="_blank" rel="nofollow" href="#">contact form</a> atau kirim email ke &#106;&#102;&#107;&#114;&#101;&#97;&#116;&#105;&#102;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</p>
 <p>Dokumen ini terakhir diperbarui pada 21 Maret 2020</p>
 			</div>
 		</div><!-- kolum-jfkreatif-kebijakan-pripasi -->
