--- a/jfkreatifemobile-view-all-ud-online.html
+++ b/jfkreatifemobile-view-all-ud-online.html
@@ -199,13 +199,13 @@
 						<a>0896 0556 3525</a>
 					</div>
 				</div>
-				<div class="isi-kontak" style="display:none">
+				<div class="isi-kontak">
 					<div class="jfkreatif-icon">
 						<i class="fa fa-envelope-o"></i>
 					</div>
 					<div class="jfkreatif-conten-kontak">
 						<span>E-Mail</span><br>
-						<a>admin@jfkreatif.com</a><br>
+						<a>jfkreatif@gmail.com</a><br>
 					</div>
 				</div>
 				<div class="isi-kontak">
@@ -227,7 +227,7 @@
 				<ul>
 					<li><a href="/bantuan/">Bantuan</a></li>
 					<li><a href="/caraorder/">Cara Order</a></li>
-					<li><a href="/faq/">Faq</a></li>
+					<li><a href="faq.html">FAQ</a></li>
 				</ul>
 			</div>
 		</div>
@@ -237,8 +237,8 @@
 			<div class="line-bawah jfdark"></div>
 			<div class="jf-Produk">
 				<ul>
-					<li><a href="#">Undangan Website</a></li>
-					<li><a href="#">Undangan Cetak</a></li>
+					<li><a href="jfkreatifemobile-view-all-ud-online.html">Undangan Website</a></li>
+					<li><a href="jfkreatifemobile-view-all-ud-cetak.html">Undangan Cetak</a></li>
 				</ul>
 			</div>
 		</div>
@@ -247,15 +247,16 @@
 	<div class="jfkreatif-row-sosial clearfix">
 		<a class="mensos-tw" href="#" target="_blank"><i class="fa fa-twitter"></i></a>
 		<a class="mensos-yt" href="#" target="_blank"><i class="fa fa-youtube-play"></i></a>
-		<a class="mensos-ig" href="#" target="_blank"><i class="fa fa-instagram"></i></a>
+		<a class="mensos-ig" href="https://www.instagram.com/vheitra/" target="_blank"><i class="fa fa-instagram"></i></a>
 		<a class="mensos-fb" href="#" target="_blank"><i class="fa fa-facebook"></i></a>
 	</div>
 	
 	<footer>
-		<a href="#" >Copyright - Jfkreatif.com All Right Reserved </a> <br> <a target="_blank" href="/cookie/">Cookie</a> - <a target="_blank" href="/disclaimer/">Disklaimer</a> - <a target="_blank" href="/Syarat-dan-ketentuan/">Syarat & Ketentuan</a> - <a target="_blank" href="/Privacy-policy/">Privacy policy</a>
+		<a href="http://jfkreatif.com" >Copyright - jfkreatif.com All Right Reserved </a> <br> <a target="_blank" href="cookie.html">Cookie</a> - <a target="_blank" href="disclaimer.html">Disklaimer</a> - <a target="_blank" href="Syarat-dan-ketentuan.html">Syarat & Ketentuan</a> - <a target="_blank" href="Privacy-policy.html">Privacy policy</a>
 	</footer>
 	
 </div>
+
 <div class="ornamenjfkreatif clearfix"><div class="ornamen color1"></div><div class="ornamen color2"></div><div class="ornamen color3"></div></div><!-- ornamenjfkreatif -->
 </div><!-- jfkreatifmobile -->
 
