--- a/jfkreatifemobile-more-004.html
+++ b/jfkreatifemobile-more-004.html
@@ -226,7 +226,7 @@ ucapan saja bukan untuk daftar hadir</i></p>
 <div class="jfkreatif-footer">
 	
 	<footer>
-		<a href="#" >Copyright - Jfkreatif.com All Right Reserved </a> <br> <a target="_blank" href="/cookie/">Cookie</a> - <a target="_blank" href="/disclaimer/">Disklaimer</a> - <a target="_blank" href="/Syarat-dan-ketentuan/">Syarat & Ketentuan</a> - <a target="_blank" href="/Privacy-policy/">Privacy policy</a>
+		<a href="#" >Copyright - jfkreatif.com All Right Reserved </a> <br> <a target="_blank" href="cookie.html">Cookie</a> - <a target="_blank" href="disclaimer.html">Disklaimer</a> - <a target="_blank" href="Syarat-dan-ketentuan.html">Syarat & Ketentuan</a> - <a target="_blank" href="Privacy-policy.html">Privacy policy</a>
 	</footer>
 	
 </div>
