--- a/jfkreatifemobile-more-002.html
+++ b/jfkreatifemobile-more-002.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>JFkreatif | JF 002</title>
      <link rel="icon" sizes="16x16" href="img/favicon.png">
-    <meta name="description" content="HTML Template">
+    <meta name="description" content="Undangan Online Website JF 002">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
@@ -20,9 +20,7 @@
         <a href="#" class="button_close_jv showAndClose_button">Tutup</a>
         <div class="inner_menu_pop_up">
             <ul>
-                   
-				
-					<li><a href="#">Faq</a></li>
+                   <li><a href="faq.html">FAQ</a></li>
             </ul>
         </div>
 </div><!-- menu_pop_up -->
@@ -227,7 +225,7 @@ ucapan saja bukan untuk daftar hadir</i></p>
 <div class="jfkreatif-footer">
 	
 	<footer>
-		<a href="#" >Copyright - Jfkreatif.com All Right Reserved </a> <br> <a target="_blank" href="/cookie/">Cookie</a> - <a target="_blank" href="/disclaimer/">Disklaimer</a> - <a target="_blank" href="/Syarat-dan-ketentuan/">Syarat & Ketentuan</a> - <a target="_blank" href="/Privacy-policy/">Privacy policy</a>
+		<a href="/" >Copyright - jfkreatif.com All Right Reserved </a> <br> <a target="_blank" href="cookie.html">Cookie</a> - <a target="_blank" href="disclaimer.html">Disklaimer</a> - <a target="_blank" href="Syarat-dan-ketentuan.html">Syarat & Ketentuan</a> - <a target="_blank" href="Privacy-policy.html">Privacy policy</a>
 	</footer>
 	
 </div>
