--- a/jfkreatifemobile-more-004.html
+++ b/jfkreatifemobile-more-004.html
@@ -21,7 +21,7 @@
         <div class="inner_menu_pop_up">
             <ul>
                     
-					<li><a href="#">Faq</a></li>
+					<li><a href="faq.html">FAQ</a></li>
             </ul>
         </div>
 </div><!-- menu_pop_up -->
@@ -226,7 +226,7 @@ ucapan saja bukan untuk daftar hadir</i></p>
 <div class="jfkreatif-footer">
 	
 	<footer>
-		<a href="#" >Copyright - jfkreatif.com All Right Reserved </a> <br> <a target="_blank" href="cookie.html">Cookie</a> - <a target="_blank" href="disclaimer.html">Disklaimer</a> - <a target="_blank" href="Syarat-dan-ketentuan.html">Syarat & Ketentuan</a> - <a target="_blank" href="Privacy-policy.html">Privacy policy</a>
+		<a href="/" >Copyright - jfkreatif.com All Right Reserved </a> <br> <a target="_blank" href="cookie.html">Cookie</a> - <a target="_blank" href="disclaimer.html">Disklaimer</a> - <a target="_blank" href="Syarat-dan-ketentuan.html">Syarat & Ketentuan</a> - <a target="_blank" href="Privacy-policy.html">Privacy policy</a>
 	</footer>
 	
 </div>
