--- a/jfkreatifemobile-view-all-ud-cetak.html
+++ b/jfkreatifemobile-view-all-ud-cetak.html
@@ -32,8 +32,8 @@
         <a href="#" class="button_close_jv showAndClose_button2">Tutup</a>
         <div class="inner_menu_pop_up">
             <ul>
-                <li><a href="#">Kontak WA 1</a></li>
-                <li><a href="#">Kontak WA 2</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Kontak WA 1</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Kontak WA 2</a></li>
             </ul>
         </div>
 </div><!-- menu_pop_up2 -->
@@ -100,6 +100,57 @@
 				</div>
 			</div>
 			
+			<div class="jf-kolom-thumb-detail">
+				<div class="jf-thumb-2">
+						<div class="jfthumbnail">
+							<a target="_blank" href="jfkreatifemobile-ud-cetak-more-005.html">
+								<img src="img/ud-ft-005.png" />
+							</a>
+						</div>
+						<div class="title-type">
+							 <div class="judul_type"> FT 005 </div>
+						</div>
+				</div>
+			</div>
+			
+			<div class="jf-kolom-thumb-detail">
+				<div class="jf-thumb-2">
+						<div class="jfthumbnail">
+							<a target="_blank" href="jfkreatifemobile-ud-cetak-more-006.html">
+								<img src="img/ud-ft-006.png" />
+							</a>
+						</div>
+						<div class="title-type">
+							 <div class="judul_type"> FT 006 </div>
+						</div>
+				</div>
+			</div>
+			
+			<div class="jf-kolom-thumb-detail">
+				<div class="jf-thumb-2">
+						<div class="jfthumbnail">
+							<a target="_blank" href="jfkreatifemobile-ud-cetak-more-007.html">
+								<img src="img/ud-ft-007.png" />
+							</a>
+						</div>
+						<div class="title-type">
+							 <div class="judul_type"> FT 007 </div>
+						</div>
+				</div>
+			</div>
+			
+			<div class="jf-kolom-thumb-detail">
+				<div class="jf-thumb-2">
+						<div class="jfthumbnail">
+							<a target="_blank" href="jfkreatifemobile-ud-cetak-more-008.html">
+								<img src="img/ud-ft-008.png" />
+							</a>
+						</div>
+						<div class="title-type">
+							 <div class="judul_type"> FT 008 </div>
+						</div>
+				</div>
+			</div>
 			
 		</div><!-- jf-kolum-view-detail -->
 	</div>
