--- a/jfkreatifemobile-view-all-ud-online.html
+++ b/jfkreatifemobile-view-all-ud-online.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>JFkreatif | Undangan Website</title>
     <link rel="icon" sizes="16x16" href="img/favicon.png">
-    <meta name="description" content="HTML Template">
+    <meta name="description" content="Undangan Online Website">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
@@ -23,7 +23,7 @@
         <a href="#" class="button_close_jv showAndClose_button">Tutup</a>
         <div class="inner_menu_pop_up">
             <ul>
-                <li><a href="#">Paq</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
         </div>
 </div><!-- menu_pop_up -->
@@ -32,8 +32,8 @@
         <a href="#" class="button_close_jv showAndClose_button2">Tutup</a>
         <div class="inner_menu_pop_up">
             <ul>
-                <li><a href="#">Kontak WA 1</a></li>
-                <li><a href="#">Kontak WA 2</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Kontak WA 1</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Kontak WA 2</a></li>
             </ul>
         </div>
 </div><!-- menu_pop_up2 -->
