--- a/jfkreatifemobile-ud-cetak-more-003.html
+++ b/jfkreatifemobile-ud-cetak-more-003.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>JFkreatif | FT 003</title>
     <link rel="icon" sizes="16x16" href="img/favicon.png">
-    <meta name="description" content="HTML Template">
+    <meta name="description" content="Undangan Cetak FT 003">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
@@ -20,7 +20,7 @@
         <a href="#" class="button_close_jv showAndClose_button">Tutup</a>
         <div class="inner_menu_pop_up">
             <ul>
-				<li><a href="/faq/">Faq</a></li>
+				<li><a href="faq.html">FAQ</a></li>
             </ul>
         </div>
 </div><!-- menu_pop_up -->
@@ -68,11 +68,11 @@ Mengklik Tombol Order dan tanyakan seputar undangan ini</p></br>
 <div class="tabel">
 	<table>
 		<tr>
-			<th> Size / Ukuran Keseluruhan </th>
+			<th> Size</th>
 			<th> Minimal Order</th>
 		</tr>
 		<tr>
-			<td> 24x18</td>
+			<td> 13x19</td>
 			<td> 300 PCS <div style="font-size:0.7rem"> <i>**SK berlaku</i></div></td>
 		</tr>
 	</table>
@@ -101,7 +101,7 @@ Mengklik Tombol Order dan tanyakan seputar undangan ini</p></br>
 <div class="jfkreatif-footer">
 	
 	<footer>
-		<a href="#" >Copyright - Jfkreatif.com All Right Reserved </a> <br> <a target="_blank" href="/cookie/">Cookie</a> - <a target="_blank" href="/disclaimer/">Disklaimer</a> - <a target="_blank" href="/Syarat-dan-ketentuan/">Syarat & Ketentuan</a> - <a target="_blank" href="/Privacy-policy/">Privacy policy</a>
+		<a href="/" >Copyright - jfkreatif.com All Right Reserved </a> <br> <a target="_blank" href="cookie.html">Cookie</a> - <a target="_blank" href="disclaimer.html">Disklaimer</a> - <a target="_blank" href="Syarat-dan-ketentuan.html">Syarat & Ketentuan</a> - <a target="_blank" href="Privacy-policy.html">Privacy policy</a>
 	</footer>
 	
 </div>
