--- a/index.html
+++ b/index.html
@@ -47,15 +47,16 @@
 	<div class="jfkreatifslide">
 		<div id="slider_jv">
 			<div class="slider single-item">
+				<div class="images_jv empat">
+					 <img src="img/jfkreatif/jfkreatif-slide-4.png">
+				</div>
 				<div class="images_jv tree">
 					 <img src="img/jfkreatif/jfkreatif-slide-3.png">
 				</div>
 				<div class="images_jv one">
 					 <img src="img/jfkreatif/jfkreatif-slide.png">
 				</div>
-				<div class="images_jv two">
-					 <img src="img/jfkreatif/jfkreatif-slide-2.png">
-				</div>
+				<!--div class="images_jv two"><img src="img/jfkreatif/jfkreatif-slide-2.png"></div -->
 			</div><!-- slider -->
 		</div><!-- slider_jv -->
 	</div><!-- jfkreatifslide -->
