--- a/index.html
+++ b/index.html
@@ -50,12 +50,18 @@
 				<div class="images_jv empat">
 					 <img src="img/jfkreatif/jfkreatif-slide-4.png">
 				</div>
-				<div class="images_jv tree">
+				<div class="images_jv lima">
+					 <img src="img/jfkreatif/jfkreatif-slide-5.png">
+				</div>
+				<div class="images_jv enam">
+					 <img src="img/jfkreatif/jfkreatif-slide-6.png">
+				</div>
+				<!-- div class="images_jv tree">
 					 <img src="img/jfkreatif/jfkreatif-slide-3.png">
-				</div>
-				<div class="images_jv one">
+				</div -->
+				<!-- div class="images_jv one">
 					 <img src="img/jfkreatif/jfkreatif-slide.png">
-				</div>
+				</div -->
 				<!--div class="images_jv two"><img src="img/jfkreatif/jfkreatif-slide-2.png"></div -->
 			</div><!-- slider -->
 		</div><!-- slider_jv -->
