--- a/jfkreatifemobile-more-001.html
+++ b/jfkreatifemobile-more-001.html
@@ -56,7 +56,7 @@
 					<img src="img/ud-jf-001.png" width="100%" />
 				 </div>
 				 <div class="text-read-more">
-					<button class="shiny-blue waorder" onclick="waorder('JF 001')"><i class="fa fa-whatsapp"></i> Order Undangan</button>
+					<button class="shiny-blue waorder" onclick="waorderUdwebsite('JF 001')"><i class="fa fa-whatsapp"></i> Order Undangan</button>
 					<button class="shiny-blue2" onclick="window.open('undangan-jf-001.html')"><i class="fa fa-eye"></i> View Demo</button>
 				 <p><b>Detail Undangan Website Tipe JF</b><br/><br/>
 
