--- a/jfkreatifemobile-more-006.html
+++ b/jfkreatifemobile-more-006.html
@@ -55,7 +55,7 @@
 					<img src="img/ud-jf-006.png" width="100%" />
 				 </div>
 				 <div class="text-read-more">
-					<button class="shiny-blue waorder" onclick="waorder('JF 006')"><i class="fa fa-whatsapp"></i> Order Undangan</button>
+					<button class="shiny-blue waorder" onclick="waorderUdwebsite('JF 006')"><i class="fa fa-whatsapp"></i> Order Undangan</button>
 					<button class="shiny-blue2"  onclick="window.open('undangan-jf-006.html')"><i class="fa fa-eye"></i> View Demo</button>
 				 <p><b>Detail Undangan Website Tipe JF</b><br/><br/>
 
