--- a/jfkreatifemobile-view-all-ud-online.html
+++ b/jfkreatifemobile-view-all-ud-online.html
@@ -54,7 +54,7 @@
 			<div class="jf-kolom-thumb-detail">
 				<div class="jf-thumb">
 						<div class="jfthumbnail">
-							<a target="_blank" href="jfkreatifemobile-more-001.html"">
+							<a href="jfkreatifemobile-more-001.html"">
 								<img src="img/ud-jf-001.png" />
 							</a>
 						</div>
@@ -68,7 +68,7 @@
 			<div class="jf-kolom-thumb-detail">
 				<div class="jf-thumb">
 						<div class="jfthumbnail">
-							<a target="_blank" href="jfkreatifemobile-more-002.html">
+							<a href="jfkreatifemobile-more-002.html">
 								<img src="img/ud-jf-002.png" />
 							</a>
 						</div>
@@ -82,7 +82,7 @@
 			<div class="jf-kolom-thumb-detail">
 				<div class="jf-thumb">
 						<div class="jfthumbnail">
-							<a target="_blank" href="jfkreatifemobile-more-003.html">
+							<a href="jfkreatifemobile-more-003.html">
 								<img src="img/ud-jf-003.png" />
 							</a>
 						</div>
@@ -96,7 +96,7 @@
 			<div class="jf-kolom-thumb-detail">
 				<div class="jf-thumb">
 						<div class="jfthumbnail">
-							<a target="_blank" href="jfkreatifemobile-more-004.html">
+							<a href="jfkreatifemobile-more-004.html">
 								<img src="img/ud-jf-004.png" />
 							</a>
 						</div>
@@ -110,7 +110,7 @@
 			<div class="jf-kolom-thumb-detail">
 				<div class="jf-thumb">
 						<div class="jfthumbnail">
-							<a target="_blank" href="jfkreatifemobile-more-006.html">
+							<a href="jfkreatifemobile-more-006.html">
 								<img src="img/ud-jf-006.png" />
 							</a>
 						</div>
@@ -124,7 +124,7 @@
 			<div class="jf-kolom-thumb-detail">
 				<div class="jf-thumb">
 						<div class="jfthumbnail">
-							<a target="_blank" href="jfkreatifemobile-more-007.html">
+							<a href="jfkreatifemobile-more-007.html">
 								<img src="img/ud-jf-007.png" />
 							</a>
 						</div>
@@ -252,7 +252,7 @@
 	</div>
 	
 	<footer>
-		<a href="http://jfkreatif.com" >Copyright - jfkreatif.com All Right Reserved </a> <br> <a target="_blank" href="cookie.html">Cookie</a> - <a target="_blank" href="disclaimer.html">Disklaimer</a> - <a target="_blank" href="Syarat-dan-ketentuan.html">Syarat & Ketentuan</a> - <a target="_blank" href="Privacy-policy.html">Privacy policy</a>
+		<a href="http://jfkreatif.com" >Copyright - jfkreatif.com All Right Reserved </a> <br> <a href="cookie.html">Cookie</a> - <a href="disclaimer.html">Disklaimer</a> - <a href="Syarat-dan-ketentuan.html">Syarat & Ketentuan</a> - <a href="Privacy-policy.html">Privacy policy</a>
 	</footer>
 	
 </div>
