--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,7 @@ caranya lihat pertanyaan lalu klik pertanyaan maka jawaban akan terbuka
 <div class="panel">
   <p>link URL Undangan website yang kamu dapatkan jika order di jfkreatif.com <br >
 Contoh :<br >
-<a href="#">www.jhkreatif.com/namapengantin</a></p>
+<a href="www.jfkreatif.com/jujufitra/">www.jfkreatif.com/jujufitra</a></p>
 </div>
 
 <button class="accordion">4. Setelah saya Order gimana cara membagikan/share nya?</button>
