--- a/faq.html
+++ b/faq.html
@@ -37,14 +37,14 @@ caranya lihat pertanyaan lalu klik pertanyaan maka jawaban akan terbuka
 
 <button class="accordion">2. Seperti Apa sih undangan Website ?</button>
 <div class="panel">
-  <p>Bisa di lihat demo undangan website di <a href="#"> sini </a></p>
+  <p>Bisa di lihat demo undangan website di <a href="/jujufitra/"> sini </a></p>
 </div>
 
 <button class="accordion">3. Seperti Apa Link URL itu?</button>
 <div class="panel">
   <p>link URL Undangan website yang kamu dapatkan jika order di jfkreatif.com <br >
 Contoh :<br >
-<a href="www.jfkreatif.com/jujufitra/">www.jfkreatif.com/jujufitra</a></p>
+<a href="/jujufitra/">www.jfkreatif.com/jujufitra/</a></p>
 </div>
 
 <button class="accordion">4. Setelah saya Order gimana cara membagikan/share nya?</button>
