--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@ caranya lihat pertanyaan lalu klik pertanyaan maka jawaban akan terbuka
 
 <button class="accordion">2. Seperti Apa sih undangan Website ?</button>
 <div class="panel">
-  <p>Bisa di lihat demo undangan website di <a href="/jujufitra/"> sini </a></p>
+  <p>Bisa di lihat demo undangan website di <a href="/jfkreatifemobile-view-all-ud-online.html "> sini </a></p>
 </div>
 
 <button class="accordion">3. Seperti Apa Link URL itu?</button>
