--- a/jfkreatifemobile-ud-cetak-more-002.html
+++ b/jfkreatifemobile-ud-cetak-more-002.html
@@ -50,7 +50,10 @@
 	<div class="row-jfkreatif">
 		<div class="jfkonten-jual-kolom">
 			<div class="jfkonten-jual clearfix">
-				 <div class="title-undangan"><h1>FT 002</h1></div>
+				 <div class="title-and-back">
+				    <div class="button-back"><a href="javascript:history.back()"><i class="fa fa-arrow-left"></i> </a></div>
+				    <div class="title-undangan"><h1>FT 002</h1></div>
+				 </div>
 				 <div class="jfthumb-load-more">
 					<img src="img/ud-ft-002.png" width="100%" />
 				 </div>
