--- a/ud-save-the-date.html
+++ b/ud-save-the-date.html
@@ -2,9 +2,9 @@
 <html lang="id">
 <head>
     <meta charset="utf-8">
-    <title>JFkreatif | Undangan Cetak</title>
+    <title>JFkreatif | Undangan Digital</title>
     <link rel="icon" sizes="16x16" href="img/favicon.png">
-    <meta name="description" content="Undangan Cetak">
+    <meta name="description" content="Undangan Digital Save The Date">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
@@ -54,48 +54,39 @@
 			<div class="jf-kolom-thumb-detail">
 				<div class="jf-thumb-2">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-001.html">
-								<img src="img/ud-ft-001.png" />
+							<a href="more-save-the-date-001.html">
+								<img src="img/save-the-date-001.png" />
 							</a>
 						</div>
 						<div class="title-type">
-							 <div class="judul_type"> FT 001 </div>
+							 <div class="judul_type"> STD 001 </div><br>
+							 <span> Rp.25.000</span><br>
 						</div>
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
 				<div class="jf-thumb-2">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-002.html">
-								<img src="img/ud-ft-002.png" />
+							<a href="more-save-the-date-002.html">
+								<img src="img/save-the-date-002.png" />
 							</a>
 						</div>
 						<div class="title-type">
-							 <div class="judul_type"> FT 002 </div>
+							 <div class="judul_type"> STD 002 </div><br>
+							 <span> Rp.25.000</span><br>
 						</div>
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
 				<div class="jf-thumb-2">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-003.html">
-								<img src="img/ud-ft-003.png" />
+							<a href="more-save-the-date-003.html">
+								<img src="img/save-the-date-003.png" />
 							</a>
 						</div>
 						<div class="title-type">
-							 <div class="judul_type"> FT 003 </div>
-						</div>
-				</div>
-			</div>
-			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
-						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-004.html">
-								<img src="img/ud-ft-004.png" />
-							</a>
-						</div>
-						<div class="title-type">
-							 <div class="judul_type"> FT 004 </div>
+							 <div class="judul_type"> STD 003 </div><br>
+							 <span> Rp.25.000</span><br>
 						</div>
 				</div>
 			</div>
@@ -103,60 +94,21 @@
 			<div class="jf-kolom-thumb-detail">
 				<div class="jf-thumb-2">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-005.html">
-								<img src="img/ud-ft-005.png" />
+							<a href="more-save-the-date-004.html">
+								<img src="img/save-the-date-004.png" />
 							</a>
 						</div>
 						<div class="title-type">
-							 <div class="judul_type"> FT 005 </div>
+							 <div class="judul_type"> STD 004 </div><br>
+							 <span> Rp.25.000</span><br>
 						</div>
 				</div>
 			</div>
-			
-			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
-						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-006.html">
-								<img src="img/ud-ft-006.png" />
-							</a>
-						</div>
-						<div class="title-type">
-							 <div class="judul_type"> FT 006 </div>
-						</div>
-				</div>
-			</div>
-			
-			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
-						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-007.html">
-								<img src="img/ud-ft-007.png" />
-							</a>
-						</div>
-						<div class="title-type">
-							 <div class="judul_type"> FT 007 </div>
-						</div>
-				</div>
-			</div>
-			
-			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
-						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-008.html">
-								<img src="img/ud-ft-008.png" />
-							</a>
-						</div>
-						<div class="title-type">
-							 <div class="judul_type"> FT 008 </div>
-						</div>
-				</div>
-			</div>
-			
 		</div><!-- jf-kolum-view-detail -->
 	</div>
 </div><!-- jfkreatif-content -->
 	
-<div class="jfpitur">
+<div class="jfpitur" style="display:none">
 	<div class="row-jfpitur">
 		<div class="kolom-jfpitur" style="display:none">
 			<div class="in-jfpitur bgblue">
@@ -175,7 +127,7 @@
 			</div><!-- in-jfpitur -->
 		</div>
 		
-		<div class="kolom-jfpitur">
+		<div class="kolom-jfpitur" style="display:none">
 			<div class="in-jfpitur bgwhite">
 				<img src="img/jfkreatif/jfk-ud-cetak-black.png" width="58" height="56">
 				<h4>FEATURE <br >UNDANGAN CETAK</h4>
