--- a/more-save-the-date-002.html
+++ b/more-save-the-date-002.html
@@ -2,9 +2,9 @@
 <html lang="id">
 <head>
     <meta charset="utf-8">
-    <title>JFkreatif | FT 006</title>
+    <title>JFkreatif | Undangan Digital 002</title>
     <link rel="icon" sizes="16x16" href="img/favicon.png">
-    <meta name="description" content="Undangan Cetak FT 006">
+    <meta name="description" content="Undangan Digital Save The Date STD 002">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
@@ -52,18 +52,18 @@
 			<div class="jfkonten-jual clearfix">
 				 <div class="title-and-back">
 				    <div class="button-back"><a href="javascript:history.back()"><i class="fa fa-arrow-left"></i> </a></div>
-				    <div class="title-undangan"><h1>FT 006</h1></div>
-				 </div>
+				    <div class="title-undangan"><h1>STD 002</h1></div>
+				 </div> 
 				 <div class="jfthumb-load-more">
-					<img src="img/ud-ft-006.png" width="100%" />
+					<img src="img/save-the-date-002.png" width="100%" />
 				 </div>
 				 <div class="text-read-more-">
-					<button class="shiny-blue waorder" onclick="waorder('FT 006')"><i class="fa fa-whatsapp"></i> Order Undangan / Tanya dulu</button>
+					<button class="shiny-blue waorder" onclick="waorderStd('STD 002')"><i class="fa fa-whatsapp"></i> Order Undangan / Tanya dulu</button>
 					
-				 <p><b>Detail Undangan Cetak Tipe FT</b><br/><br/>
+				 <p><b>Detail Undangan Digital STD 002</b><br/><br/>
 
 Terima kasih Kamu Sudah memilih 
-Undangan Cetak tipe FT dan Dibawah 
+Undangan Digital Save The Date STD 002 dan Dibawah 
 Ini Detail Undangan Beserta pitur-pitur 
 di dalamnya,Baca secara Seksama 
 Agar kamu Lebih jelas,sebelum order bisa Tanya-Tanya Dulu dengan Cara  
@@ -71,28 +71,18 @@ Mengklik Tombol Order dan tanyakan seputar undangan ini</p></br>
 <div class="tabel">
 	<table>
 		<tr>
-			<th> Size </th>
-			<th> Minimal Order</th>
+			<th> Format </th>
+			<th> Iclude</th>
 		</tr>
 		<tr>
-			<td> 13x19</td>
-			<td> 300 PCS <div style="font-size:0.7rem"> <i>**SK berlaku</i></div></td>
+			<td> .jpg</td>
+			<td> 1 foto </br> Tanggal, Bulan, Tahun, Jam Akad-Resepsi,Lokasi <div style="font-size:0.7rem"> <i>**SK berlaku</i></div></td>
 		</tr>
 	</table>
 </div>
 </div>
 
 
-</br></br>
-
-<div class="preview-ud-cetak">
-	<a href="img/preview-ft-006-1.png"><img src="img/preview-ft-006-1.png" /></a>
-	</br></br>
-	<a href="img/preview-ft-006-2.png"><img src="img/preview-ft-006-2.png" /></a>
-	</br></br>
-	<a href="img/preview-ft-006-3.png"><img src="img/preview-ft-006-3.png" /></a>
-	</br>
-</div>
 			</div><!-- jfkonten-jual -->
 		
 		</div>
