--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Belum Punya Undangan..?<br>Kami Solusinya..!!!
 		<div class="colom-jfkreatif">
 				<div class="top-conten-undangan">
 					 <div class="atas-kiri">Save The Date</div>
-					 <div class="atas-kanan"><a href="jfkreatifemobile-view-all-ud-cetak.html">Lainnya <i class="fa fa-long-arrow-right"></i></a></div>
+					 <div class="atas-kanan"><a href="ud-save-the-date.html">Lainnya <i class="fa fa-long-arrow-right"></i></a></div>
 				</div>
 				<div class="jfslide-content2">
 					<div class="jf-thumb">
