--- a/more-save-the-date-003.html
+++ b/more-save-the-date-003.html
@@ -2,9 +2,9 @@
 <html lang="id">
 <head>
     <meta charset="utf-8">
-    <title>JFkreatif | Undangan Digital 003</title>
+    <title>JFkreatif | Undangan Digital Gambar 003</title>
     <link rel="icon" sizes="16x16" href="img/favicon.png">
-    <meta name="description" content="Undangan Digital Save The Date STD 003">
+    <meta name="description" content="Undangan Digital Gambar STD 003">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
@@ -63,7 +63,7 @@
 				 <p><b>Detail Undangan Digital STD 003</b><br/><br/>
 
 Terima kasih Kamu Sudah memilih 
-Undangan Digital Save The Date STD 003 dan Dibawah 
+Undangan Digital Gambar STD 003 dan Dibawah 
 Ini Detail Undangan Beserta pitur-pitur 
 di dalamnya,Baca secara Seksama 
 Agar kamu Lebih jelas,sebelum order bisa Tanya-Tanya Dulu dengan Cara  
