--- a/ud-save-the-date.html
+++ b/ud-save-the-date.html
@@ -2,9 +2,9 @@
 <html lang="id">
 <head>
     <meta charset="utf-8">
-    <title>JFkreatif | Undangan Digital</title>
+    <title>JFkreatif | Undangan Digital Gambar</title>
     <link rel="icon" sizes="16x16" href="img/favicon.png">
-    <meta name="description" content="Undangan Digital Save The Date">
+    <meta name="description" content="Undangan Digital Gambar">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
@@ -50,6 +50,7 @@
 	
 <div class="jfkreatif-content">
 	<div class="row-jfkreatif">
+	    <br />
 		<div class="jf-kolum-view-detail-2">
 			<div class="jf-kolom-thumb-detail">
 				<div class="jf-thumb-2">
