--- a/jfkreatifemobile-more-001.html
+++ b/jfkreatifemobile-more-001.html
@@ -63,12 +63,10 @@
 					<button class="shiny-blue2" onclick="window.open('undangan-jf-001.html')"><i class="fa fa-eye"></i> View Demo</button>
 				 <p><b>Detail Undangan Website Tipe JF</b><br/><br/>
 
-Terima kasih Kamu Sudah memilih 
-Undangan website tipe JF dan Dibawah 
-Ini Detail Undangan Beserta pitur-pitur 
-di dalamnya,Baca secara Seksama 
-Agar kamu Lebih jelas sebelum 
-Mengklik Tombol Order</p></br>
+Terima kasih telah Berkunjung <br>
+Di bawah ini detail undangam digital website
+Beserta fitur-fitur nya <br><br> jika ada yang mau ditanyakan jangan sungkan-sungkan chat kami<br><br>
+Klik tombol [ Order / Tanya dulu ] Untuk menanyakan seputar undangan ini dan jika kamu cocol bisa langsung order<br><br>Terima kasih <br><br></p><br>
 
 				 </div>
 			</div><!-- jfkonten-jual -->
