Update button value

--- a/jfkreatifemobile-more-001.html
+++ b/jfkreatifemobile-more-001.html
@@ -59,14 +59,14 @@
 					<img src="img/ud-jf-001.png" width="100%" />
 				 </div>
 				 <div class="text-read-more">
-					<button class="shiny-blue waorder" onclick="waorderUdwebsite('JF 001')"><i class="fa fa-whatsapp"></i> Order Undangan</button>
+					<button class="shiny-blue waorder" onclick="waorderUdwebsite('JF 001')"><i class="fa fa-whatsapp"></i> Order / Tanya Dulu</button>
 					<button class="shiny-blue2" onclick="window.open('undangan-jf-001.html')"><i class="fa fa-eye"></i> View Demo</button>
 				 <p><b>Detail Undangan Website Tipe JF</b><br/><br/>
 
 Terima kasih telah Berkunjung <br>
 Di bawah ini detail undangam digital website
 Beserta fitur-fitur nya <br><br> jika ada yang mau ditanyakan jangan sungkan-sungkan chat kami<br><br>
-Klik tombol [ Order / Tanya dulu ] Untuk menanyakan seputar undangan ini dan jika kamu cocol bisa langsung order<br><br>Terima kasih <br><br></p><br>
+Klik tombol [ Order / Tanya dulu ] Untuk menanyakan seputar undangan ini dan jika kamu cocok bisa langsung order<br><br>Terima kasih <br><br></p><br>
 
 				 </div>
 			</div><!-- jfkonten-jual -->
